# Instrumentpp

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: example_1.cpp
src/: instrument.cpp  instrument.h
